packages/next-swc/crates/core/tests/errors/react-server-components/client-graph/use-client/input.js
import 'react'
;('use client')

export default function () {
  return null
}
